--- a/research.Rmd
+++ b/research.Rmd
@@ -39,6 +39,8 @@ output:
 
 - Cunha, A. B., Babik, I., Choi, D., Koziol, N., Harbourne, R., Dusing, S., Westcott-McCoy, S., Bovaird, J., Willett, S., & Lobo, M. A. (under review) The Impact of Severity of Motor Delay, Timing of Task Mastery, and START-Play Intervention on the Development of Means-End Problem Solving in Young Children. Submitted to Research in Developmental Disabilities.
 
+- Babik, I., Cunha, A. B., Choi, D., Koziol, N., Hsu, L. Harbourne, R., Dusing, S., Westcott-McCoy, S., Bovaird, J., Willett, S., & Lobo, M. A. (under review) Affordances in the Home Environment Moderate the Effects of the START-Play Intervention and Motor Delay Severity on Children’s Motor, Language, and Cognitive Development. Submitted to Developmental Psychology.
+
 
 ## PRESENTATIONS
 
